fixed daily/monthly summary